test: add native Box2D conformance fixture