@@ -20,6 +20,42 @@ import org.junit.jupiter.api.Timeout;
 
 final class Lwjgl3FixtureSmokeTest {
     @Test
+    @Timeout(120)
+    void realHiddenLwjgl3ApplicationRunsCompleteNativeBox2dVerticalSlice() throws Exception {
+        Path evidence = Files.createTempFile("agent-runtime-box2d-fixture-", ".txt");
+        Files.deleteIfExists(evidence);
+        List<String> command = new ArrayList<>();
+        command.add(Path.of(System.getProperty("java.home"), "bin", "java").toString());
+        command.add("--enable-native-access=ALL-UNNAMED");
+        command.add("-cp");
+        command.add(System.getProperty("fixture.classpath"));
+        command.add(Box2dConformanceApplication.class.getName());
+        command.add(evidence.toString());
+        Process process = new ProcessBuilder(command)
+                .redirectErrorStream(true)
+                .start();
+        boolean exited = process.waitFor(Duration.ofSeconds(90).toMillis(), TimeUnit.MILLISECONDS);
+        if (!exited) {
+            process.destroyForcibly();
+        }
+        String output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+        assertTrue(exited, () -> "Box2D fixture timed out: " + output);
+        assertEquals(0, process.exitValue(), () -> "Box2D fixture failed: " + output);
+        assertTrue(Files.isRegularFile(evidence));
+        String facts = Files.readString(evidence);
+        assertTrue(facts.contains("session=box2d-conformance-fixture"));
+        assertTrue(facts.contains("controlledTicks=60"));
+        assertTrue(facts.contains("presentationRenders=1"));
+        assertTrue(facts.contains("position=PASS"));
+        assertTrue(facts.contains("contact=PASS"));
+        assertTrue(facts.contains("determinism=EQUAL"));
+        assertTrue(facts.contains("frameCorrelated=true"));
+        assertTrue(facts.contains("dispatchThreadCorrect=true"));
+        assertFalse(facts.contains("Exception"));
+        Files.deleteIfExists(evidence);
+    }
+
+    @Test
     @Timeout(90)
     void realHiddenLwjgl3RenderLoopUsesCanonicalFixedStepHelper() throws Exception {
         Path evidence = Files.createTempFile("agent-runtime-fixed-step-fixture-", ".txt");
